projects/batfish/src/test/resources/org/batfish/representation/aws/SecurityGroupTestDeser.json
{
  "SecurityGroups": [
    {
      "Description": "For test",
      "GroupId": "sg-01a88a2ecd621d9ba",
      "GroupName": "Single port ",
      "IpPermissions": [
        {
          "FromPort": 22,
          "IpProtocol": "tcp",
          "IpRanges": [
            {
              "CidrIp": "1.2.3.4/32",
              "Description": "Allowing single port"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "ToPort": 22,
          "UserIdGroupPairs": []
        }
      ],
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": [],
          "UserIdGroupPairs": []
        },
        {
          "IpProtocol": "-1",
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": [
            {
              "PrefixListId": "pl-7ba54012"
            }
          ],
          "UserIdGroupPairs": []
        }
      ],
      "OwnerId": "118292266645",
      "VpcId": "vpc-6f6f8316"
    }
  ]
}
